--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <!-- begin loading 动画，对应的样式在 src/css/loading.scss -->
+  <!-- S loading 动画，对应的样式在 src/css/loading.scss -->
   <div id="o2_loading" class="loading">
     <div class="inner">
       <i class="before"></i>
@@ -21,8 +21,8 @@
     </div>
     <div class="text">loading</div>
   </div>
-  <!-- end loading -->
-  <!-- begin 主体内容 -->
+  <!-- E loading -->
+  <!-- S 主体内容 -->
   <div id="o2_main" class="main hide">
     <div class="swiper-container" id="o2_swiper">
       <div class="swiper-wrapper">
@@ -53,7 +53,7 @@
       </div>
     </div>
   </div>
-  <!-- end 主体内容 -->
+  <!-- E 主体内容 -->
 </body>
 
 </html>
