--- a/src/index.html
+++ b/src/index.html
@@ -29,25 +29,25 @@
         <div class="swiper-slide">
           <h2 class="title">HTML</h2>
           <div class="logo">
-            <img src="./img/html5.png" preload/>
+            <img src="./img/html5.png" data-preload/>
           </div>
         </div>
         <div class="swiper-slide">
           <h2 class="title">CSS</h2>
           <div class="logo">
-            <img src="./img/css3.png" preload/>
+            <img src="./img/css3.png" data-preload/>
           </div>
         </div>
         <div class="swiper-slide">
           <h2 class="title">JavaScript</h2>
           <div class="logo">
-            <img src="./img/javascript.png" preload/>
+            <img src="./img/javascript.png" data-preload/>
           </div>
         </div>
         <div class="swiper-slide">
           <h2 class="title">Node.js</h2>
           <div class="logo">
-            <img src="./img/nodejs.png" preload/>
+            <img src="./img/nodejs.png" data-preload/>
           </div>
         </div>
       </div>
